@@ -423,12 +423,21 @@ AC_ARG_ENABLE([linux-native-aio],
   [enable_linux_native_aio=no]
 )
 
-case $host_os in
-  linux*);;
-  *) AS_IF([test "x$enable_linux_native_aio" = "xyes"], [
-      AC_MSG_ERROR([Linux native AIO can only be enabled on Linux systems])
-    ])
-esac
+AS_IF([test "x$enable_linux_native_aio" = "xyes"], [
+  case $host_os in
+    linux*) ;;
+    *) AC_MSG_ERROR([Linux native AIO can only be enabled on Linux systems])
+  esac
+
+  AC_CHECK_HEADERS([libaio.h], [],
+    [AC_MSG_ERROR([Linux native AIO requires libaio.h])]
+  )
+
+  AC_SEARCH_LIBS([io_submit], [aio], [],
+    [AC_MSG_ERROR([Linux native AIO requires libaio])]
+  )
+
+])
 
 AC_MSG_RESULT([$enable_linux_native_aio])
 TS_ARG_ENABLE_VAR([use], [linux_native_aio])
