@@ -18,7 +18,7 @@
 package {[
     'gcc', 'g++', 'automake', 'autoconf', 'libtool', 'pkg-config',
     'libssl-dev', 'tcl-dev', 'libexpat1-dev', 'libpcre3-dev', 'libhwloc-dev',
-    'libcurl3-dev', 'libncurses5-dev',
+    'libcurl3-dev', 'libncurses5-dev', 'libaio-dev',
     'libcap-dev', 'libcap2', 'bison', 'flex', 'make',
   ]:
   ensure => latest
