@@ -18,7 +18,7 @@
 package {[
     'gcc', 'automake', 'autoconf', 'libtool', 'pkgconfig',
     'openssl-devel', 'tcl-devel', 'expat-devel', 'pcre-devel',
-    'ncurses-devel', 'libcurl-devel',
+    'ncurses-devel', 'libcurl-devel', 'libaio-devel',
     'hwloc-devel', 'libcap-devel', 'bison', 'flex', 'make',
   ]:
   ensure => latest
