@@ -54,88 +54,22 @@
 #define AIO_MODE                 AIO_MODE_THREAD
 #endif
 
+#define LIO_READ        0x1
+#define LIO_WRITE       0x2
+
 #if AIO_MODE == AIO_MODE_NATIVE
 
-#include <sys/syscall.h>  /* for __NR_* definitions */
-#include <linux/aio_abi.h>  /* for AIO types and constants */
+#include <libaio.h>
+
 #define MAX_AIO_EVENTS 1024
 
-#if defined(__LITTLE_ENDIAN)
-#if (SIZEOF_VOID_POINTER == 4)
-#define PADDEDPtr(x, y) x; unsigned y
-#define PADDEDul(x, y) unsigned long x; unsigned y
-#elif (SIZEOF_VOID_POINTER == 8)
-#define PADDEDPtr(x, y) x
-#define PADDEDul(x, y) unsigned long x
-#endif
-#elif defined(__BIG_ENDIAN)
-#if (SIZEOF_VOID_POINTER == 4)
-#define PADDEDPtr(x, y) unsigned y; x
-#define PADDEDul(x, y) unsigned y; unsigned long y
-#elif (SIZEOF_VOID_POINTER == 8)
-#define PADDEDPtr(x, y) x
-#define PADDEDul(x, y) unsigned long x
-#endif
-#else
-#error edit for your odd byteorder.
-#endif
+typedef struct iocb ink_aiocb_t;
+typedef struct io_event ink_io_event_t;
 
-typedef struct ink_iocb {
-  /* these are internal to the kernel/libc. */
-  PADDEDPtr(void *aio_data, _pad1); /* data to be returned in event's data */
-  unsigned PADDED(aio_key, aio_reserved1);
-        /* the kernel sets aio_key to the req # */
-
-  /* common fields */
-  short aio_lio_opcode; /* see IOCB_CMD_ above */
-  short aio_reqprio;
-  int aio_fildes;
-
-  PADDEDPtr(void *aio_buf, _pad2);
-  PADDEDul(aio_nbytes, _pad3);
-  int64_t aio_offset;
-
-  /* extra parameters */
-  uint64_t aio_reserved2;  /* TODO: use this for a (struct sigevent *) */
-
-  /* flags for the "struct iocb" */
-  int aio_flags;
-
-  /*
-   * if the IOCB_FLAG_RESFD flag of "aio_flags" is set, this is an
-   * eventfd to signal AIO readiness to
-   */
-  int aio_resfd;
-
-} ink_aiocb_t;
-
-typedef struct ink_io_event {
-  PADDEDPtr(void *data, _pad1);   /* the data field from the iocb */
-  PADDEDPtr(ink_aiocb_t *obj, _pad2);    /* what iocb this event came from */
-  PADDEDul(res, _pad3);    /* result code for this event */
-  PADDEDul(res2, _pad4);   /* secondary result */
-} ink_io_event_t;
-
-TS_INLINE int io_setup(unsigned nr, aio_context_t *ctxp)
-{
-  return syscall(__NR_io_setup, nr, ctxp);
-}
-
-TS_INLINE int io_destroy(aio_context_t ctx)
-{
-  return syscall(__NR_io_destroy, ctx);
-}
-
-TS_INLINE int io_submit(aio_context_t ctx, long nr,  ink_aiocb_t **iocbpp)
-{
-  return syscall(__NR_io_submit, ctx, nr, iocbpp);
-}
-
-TS_INLINE int io_getevents(aio_context_t ctx, long min_nr, long max_nr,
-    ink_io_event_t *events, struct timespec *timeout)
-{
-  return syscall(__NR_io_getevents, ctx, min_nr, max_nr, events, timeout);
-}
+// XXX hokey old-school compatibility with ink_aiocb.h ...
+#define aio_nbytes  u.c.nbytes
+#define aio_offset  u.c.offset
+#define aio_buf     u.c.buf
 
 struct AIOVec: public Continuation
 {
@@ -151,10 +85,26 @@ struct AIOVec: public Continuation
 
   int mainEvent(int event, Event *e);
 };
+
 #else
-typedef ink_aiocb ink_aiocb_t;
+
+typedef struct ink_aiocb
+{
+  int aio_fildes;
+  volatile void *aio_buf;       /* buffer location */
+  size_t aio_nbytes;            /* length of transfer */
+  off_t aio_offset;             /* file offset */
+
+  int aio_reqprio;              /* request priority offset */
+  int aio_lio_opcode;           /* listio operation */
+  int aio_state;                /* state flag for List I/O */
+  int aio__pad[1];              /* extension padding */
+} ink_aiocb_t;
+
 bool ink_aio_thread_num_set(int thread_num);
+
 #endif
+
 // AIOCallback::thread special values
 #define AIO_CALLBACK_THREAD_ANY ((EThread*)0) // any regular event thread
 #define AIO_CALLBACK_THREAD_AIO ((EThread*)-1)
@@ -182,7 +132,7 @@ struct AIOCallback: public Continuation
 struct DiskHandler: public Continuation
 {
   Event *trigger_event;
-  aio_context_t ctx;
+  io_context_t ctx;
   ink_io_event_t events[MAX_AIO_EVENTS];
   Que(AIOCallback, link) ready_list;
   Que(AIOCallback, link) complete_list;
@@ -190,7 +140,7 @@ struct DiskHandler: public Continuation
   int mainAIOEvent(int event, Event *e);
   DiskHandler() {
     SET_HANDLER(&DiskHandler::startAIOEvent);
-    memset(&ctx, 0, sizeof(aio_context_t));
+    memset(&ctx, 0, sizeof(ctx));
     int ret = io_setup(MAX_AIO_EVENTS, &ctx);
     if (ret < 0) {
       perror("io_setup error");
@@ -198,6 +148,7 @@ struct DiskHandler: public Continuation
   }
 };
 #endif
+
 void ink_aio_init(ModuleVersion version);
 int ink_aio_start();
 void ink_aio_set_callback(Continuation * error_callback);
